# Advanced_Topics_In_Programming_hw1

./: Algorithm.cpp  Algorithm.h  AlgorithmRegistrar.h  AlgorithmRegistration.h  BatteryMeterImpl.cpp  BatteryMeterImpl.h  CMakeLists.txt  Config.cpp  Config.h  Controller.cpp  Controller.h  DeterministicAlgorithm.cpp  DeterministicAlgorithm.h  Direction.cpp  Direction.h  DirtSensorImpl.cpp  DirtSensorImpl.h  FileDataExtractor.cpp  FileDataExtractor.h  GameMaster.cpp  GameMaster.h  General.cpp  General.h  House.cpp  House.h  Logger.cpp  Logger.h  Makefile  MySimulator.cpp  MySimulator.h  Point.cpp  Point.h  README.md  RandomAlgorithm.cpp  RandomAlgorithm.h  Sensors.h  Utils.cpp  Utils.h  VacuumCleaner.cpp  VacuumCleaner.h  (+11 more)
Sensors/: BatteryMeterImpl.cpp  BatteryMeterImpl.h  DirtSensorImpl.h  WallsSensorImpl.cpp  WallsSensorImpl.h
algorithms/: Algorithm.cpp  Algorithm.h  AlgorithmRegistration.h
algorithms/deterministic/: CMakeLists.txt  DeterministicAlgorithm.cpp  DeterministicAlgorithm.h
algorithms/random/: CMakeLists.txt  RandomAlgorithm.cpp  RandomAlgorithm.h
common/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  BatteryMeterImpl.h  Config.cpp  Direction.cpp  DirtSensorImpl.h  General.h  Logger.cpp  Utils.cpp  Utils.h  WallsSensorImpl.h  abstract_algorithm.h
hw1/: Algorithm.cpp  Algorithm.h  House.cpp
inputs and outputs/: input_a.txt  input_b.txt  input_c.txt  output_a.txt  output_b.txt  output_c.txt
mermaid/: classDiagram.mmd  sequenceDiagram.mmd
simulator/: AlgorithmWrapper.cpp  AlgorithmWrapper.h  CMakeLists.txt  FileDataExtractor.cpp  FileDataExtractor.h  House.cpp  House.h  HouseWrapper.cpp  HouseWrapper.h  MySimulator.cpp  MySimulator.h  ThreadController.cpp  ThreadController.h  VacuumCleaner.cpp  VacuumCleaner.h  myrobot.cpp  wall_sensor.h
testers/: tester1.txt  tester3.txt  tester6.txt
testers/hw1/: tester1.txt  tester2.txt  tester4.txt  tester5.txt  tester7.txt
testers/hw2/: tester1.txt  tester5.txt  tester5a.txt  tester6.txt
tests/: summary.csv
tests/inputs/: tester2.house  tester3.house  tester4.house  tester5.house  tester7.house  tester8.house  tester9.house
tests/outputs/: tester1-lib206507923_322853813_DeterministicAlgorithm.txt  tester1-lib206507923_322853813_RandomAlgorithm.txt  tester2-lib206507923_322853813_RandomAlgorithm.txt  tester3-lib206507923_322853813_DeterministicAlgorithm.txt  tester3-lib206507923_322853813_RandomAlgorithm.txt  tester4-lib206507923_322853813_DeterministicAlgorithm.txt  tester4-lib206507923_322853813_RandomAlgorithm.txt  tester5-lib206507923_322853813_DeterministicAlgorithm.txt  tester5-lib206507923_322853813_RandomAlgorithm.txt  tester6-lib206507923_322853813_DeterministicAlgorithm.txt  tester6-lib206507923_322853813_RandomAlgorithm.txt  tester7-lib206507923_322853813_DeterministicAlgorithm.txt  tester7-lib206507923_322853813_RandomAlgorithm.txt  tester8-lib206507923_322853813_DeterministicAlgorithm.txt  tester9-lib206507923_322853813_DeterministicAlgorithm.txt  tester9-lib206507923_322853813_RandomAlgorithm.txt
